# tonet-browser

./: .env.example  .gitignore  CHANGELOG.md  CLA_DRAFT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TONET_VISION.md
.cursor/rules/: pr-workflow.mdc
.github/workflows/: cdn-republish.yml  ci.yml  installers-windows.yml  landing-cloudflare.yml  linux-deb.yml  release-on-version-bump.yml  servo-engine-linux.yml  servo-engine-windows.yml
corpus/: README.md
corpus/fixtures/: minimal.html  with_links.html
crates/tonet/: Cargo.toml  build.rs
crates/tonet-engine/: Cargo.toml
crates/tonet-engine/src/: document_url.rs  lib.rs  limits.rs  navigation.rs  policy.rs
crates/tonet-engine/src/css/: author_cascade.rs  declarations.rs  mod.rs  simple_rules.rs  syntax.rs
crates/tonet-engine/src/html/: attributes.rs  entities.rs  minimal.rs  mod.rs  tokenizer.rs
crates/tonet-engine/src/js/: mod.rs
crates/tonet-engine/tests/: corpus_smoke.rs  tokenizer_corpus.rs  tree_corpus.rs
crates/tonet-setup/: Cargo.toml  build.rs
crates/tonet-setup/src/: branding.rs  i18n.rs  install.rs  install_state.rs  main.rs  release.rs  uninstall.rs  version.rs  windows_util.rs
crates/tonet-setup/windows/: app.manifest
crates/tonet/assets/: shortcuts.tsv
crates/tonet/src/: app.rs  branding.rs  browser_log.rs  css_resolve.rs  document_url.rs  i18n.rs  internal_pages.rs  limits.rs  main.rs  network.rs  new_tab.rs  parser.rs  platform_windows.rs  policy.rs  renderer.rs  session_snapshot.rs  settings.rs  shortcut_catalog.rs  tab.rs  theme.rs  ui.rs  update.rs  window_chrome.rs  window_resize.rs
crates/tonet/src/chrome/: caption.rs  ids.rs  mod.rs  tab_strip.rs  toolbar.rs
crates/tonet/src/css/: mod.rs  syntax.rs
crates/tonet/src/devtools/: elements.rs  mod.rs  network.rs  scrollbar.rs
crates/tonet/src/html/: attributes.rs  minimal.rs  mod.rs  tree_builder.rs
crates/tonet/src/servo_engine/: background_download.rs  content_disposition.rs  download_heuristic.rs  embedder_devtools.rs  embedder_ids.rs  mod.rs  permission_store.rs  runtime_win.rs  servo_favicon.rs  tonet_scheme_html.rs  url_path.rs  visit_policy.rs
crates/tonet/src/servo_engine/slint_embed/: gpu_rendering_context.rs  mod.rs  surfman_context.rs
docs/: CDN_RELEASES.md  SERVO_INTEGRATION_CHECKLIST.md
installer/: tonet.iss
packaging/debian/: build-deb.sh
packaging/linux/: tonet.desktop
scripts/: build-installer.ps1  build-setup-inno.ps1  cdn-merge-manifest.mjs  generate-app-ico.mjs  install-linux-user.sh  publish-cdn-from-release.sh  tonet-servo-windows.ps1
src/: app.rs  main.rs  network.rs  parser.rs  renderer.rs  ui.rs
web/landing/: astro.config.mjs  compare.html  docs.html  download.html  guide.html  handbook.html  index.html  package-lock.json  package.json  roadmap.html  tsconfig.json  vite.config.ts  wrangler.toml
web/landing/docs-site/: mkdocs.yml
web/landing/docs-site/docs/: getting-started.md  index.md
web/landing/docs-site/docs/operations/: cdn-and-releases.md  packaging-and-signing.md
web/landing/docs-site/docs/product/: comparisons.md  roadmap.md  use-cases.md
web/landing/public/: version.json
web/landing/scripts/: embed-version.mjs  sync-public-manifest.mjs
web/landing/src/: SiteNav.tsx  detect-os.ts  docs.ts  download-logic.ts  download.ts  guide.ts  main.ts  mount-nav.tsx  site-i18n.ts  worker.ts
web/landing/src/components/: CompareBoot.tsx  DocsBoot.tsx  DownloadBoot.tsx  Footer.astro  GuideBoot.tsx  HandbookBoot.tsx  HomeBoot.tsx  HomePlatformIcons.tsx  HomeReveal.tsx  HomeScrollShowcase.tsx  LanguageBoot.tsx  RoadmapBoot.tsx  SiteChromeBoot.tsx  SiteNav.tsx
web/landing/src/i18n/: extra-pages.ts
web/landing/src/layouts/: BaseLayout.astro
web/landing/src/pages/: about.astro  compare.astro  docs.astro  download.astro  guide.astro  handbook.astro  index.astro  privacy.astro  roadmap.astro  terms.astro
web/landing/src/styles/: global.css
web/landing/src/types/: site-page.ts
wix/: Main.wxs
