[package]
name = "tonet"
version = "0.1.0"
edition = "2021"
description = "Tonet — navegador minimalista (MVP). https://usetonet.com"
authors = ["Tonet Contributors"]
license = "MIT"
repository = "https://github.com/usetonet/tonet-browser"

[dependencies]
eframe = "0.29"
egui = "0.29"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
url = "2.5"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
