# Tonet workspace: desktop (`crates/tonet`) and marketing site (`web/landing`) are separate.
[workspace]
members = ["crates/tonet", "crates/tonet-engine", "crates/tonet-setup"]
resolver = "2"
default-members = ["crates/tonet"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
