[package]
name = "tonet-engine"
version = "0.1.0"
edition = "2021"
description = "Tonet rendering engine core: limits, navigation policy, and shared contracts (no UI)."
authors = ["Tonet Contributors"]
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/usetonet/tonet-browser"

[dependencies]

[lints.rust]
unsafe_code = "forbid"
