[package]
name = "tonet-engine"
version = "0.1.0"
edition = "2021"
description = "Tonet rendering engine core: HTML/CSS/JS contracts, limits, and navigation policy (no UI)."
authors = ["Tonet Contributors"]
license = "GPL-3.0-or-later"
repository = "https://github.com/usetonet/tonet-browser"

[dependencies]
url = "2.5"

[lints.rust]
unsafe_code = "forbid"
