[package]
name = "tonet-setup"
version = "0.2.2"
edition = "2021"
description = "Tonet web installer — downloads and installs the latest release"
authors = ["Tonet Contributors"]
license = "GPL-3.0-or-later"
repository = "https://github.com/usetonet/tonet-browser"
build = "build.rs"

[[bin]]
name = "TonetSetup"
path = "src/main.rs"
# Avoid `cargo test` building a test harness for the GUI installer (Windows elevation / CI noise).
test = false

[dependencies]
eframe = "0.29"
egui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = [
    "blocking",
    "json",
    "rustls-tls-webpki-roots-no-provider",
] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "aws_lc_rs"] }
regex = "1.11"
thiserror = "2.0"
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[build-dependencies]
winres = "0.1"
