[package]
name = "tonet"
version = "0.1.0"
edition = "2021"
description = "Tonet — navegador minimalista (MVP). https://usetonet.com"
authors = ["Tonet Contributors"]
license = "MIT"
repository = "https://github.com/usetonet/tonet-browser"

[dependencies]
eframe = "0.29"
egui = "0.29"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"] }
url = "2.5"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
semver = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
webbrowser = "1.0"
